add new NugetPackages --A

--- a/proyecto/ProyectoExamenU1/ProyectoExamenU1/appsettings.Development.json
+++ b/proyecto/ProyectoExamenU1/ProyectoExamenU1/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": " Server=localhost;Database=ProyectoExamenLDPU1;User Id=sa;Password=1234;Trusted_Connection=false; TrustServerCertificate=true;"
+    "DefaultConnection": " Server=localhost;Database=ProyectoExamenLDPU1;User Id=sa;Password=cabwimht;Trusted_Connection=false; TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
